web/server/data/bash-logs/bash_2026-07-14T09-51-06_p9w7.log
# bash log — 2026/7/14 17:51:06
# session: (none)
# exit: 1  duration: 161ms
# command:
python -c "import os; items = os.listdir('C:\\Users\\dmql\\Desktop\\25立项'); print('\n'.join(items))"



# stderr (110 chars):
  File "<string>", line 1
    "import
    ^
SyntaxError: unterminated string literal (detected at line 1)
